finished coding assignment

--- a/Y2S1/Health/CodingAssignment/Mason_CA.qmd
+++ b/Y2S1/Health/CodingAssignment/Mason_CA.qmd
@@ -1,7 +1,11 @@
 ---
 title: "Reduced Form Coding Assignment - ECON 8250"
 author: "Tate Mason"
-format: pdf
+format:
+  pdf:
+    keep-tex: true
+header-includes:
+  - \usepackage{rotating}
 ---
 
 1. Start by coming up with a research question where you might use this research design.
@@ -28,49 +32,83 @@ Describe the regression results for each of your regressions in words.
 
 ## 1. Research Question
 
-How does insurance premium rise with age and risk preference?
+How does insurance premium rise with activity and risk preference?
 
 ## 2. 
 
 ```{r, output=FALSE}
 set.seed(0219)
 n <- 1000
-id <- 1:n
-age <- sample(18:70, n, replace = TRUE)
-risk_pref <- rnorm(n, mean = 0, sd = 1)
-insprem <- 200 + 5 * age + 20 * risk_pref 
+id <- rep(1:n, each = 50)
+time <- rep(1:50, times = n)
+activity_level <- rnorm(n * 50, mean = 3, sd = 1) # hours of activity per week
+risk_pref <- rbinom(n * 50, 1, 0.5) # 0 = low risk preference, 1 = high risk preference
+insprem <- 200 + 5 * activity_level + 20 * risk_pref 
 + rnorm(n, mean = 0, sd = 10)
-data <- data.frame(id, age, risk_pref, insprem)
+data <- data.frame(id = id, activity_level = activity_level, risk_pref = risk_pref, insprem = insprem)
 ```
 
-Each agent is a unit, with n=1000. The true model is: 
-$$InsPrem_i = \beta_0 + \beta_1\cdot Age_i + \beta_2\cdot RiskPref_i + \epsilon_i,$$
-where $InsPrem_i$ is the insurance premium for agent i, $Age_i$ is the age of agent i, $RiskPref_i$ is the risk preference of agent i,
-and $\epsilon_i$ is the error term. The true coefficients are: $\beta_0 = 200$, $\beta_1 = 5$, $\beta_2 = 20$, $\beta_3 = 10$.
+The unit of observation is an individual with 1000 agents. Each agent has 50 observations over time. 
+In this model, $Y$ is insurance premium, $X$ is activity level, and $W$ is risk preference. The true model is:
+
+$$InsurancePremium_i = \beta_0 + \beta_1\cdot ActivityLevel_i + \beta_2\cdot RiskPreference_i + \epsilon_i,$$
+
+where $InsurancePremium_i$ is the insurance premium for individual i, $ActivityLevel_i$ is the activity level of individual i,
+$RiskPreference_i$ is the risk preference of individual i, and $\epsilon_i$ is the error term. The true coefficients are: $\beta_0 = 200$,
+$\beta_1 = 5$, $\beta_2 = 20$, and $\sigma = 10$. We observe $InsurancePremium_i$, $ActivityLevel_i$, and $RiskPreference_i$.
+
 
 ## 3. Regressions
 
-The regression with endogeneity problem is: 
-$$InsPrem_i = \alpha_0 + \alpha_1\cdot Age_i + u_i,$$
-where $u_i$ is the error term which includes the risk preference parameter. The regression that "fixes" the endogeneity problem is: 
-$$InsPrem_i = \gamma_0 + \gamma_1\cdot Age_i + \gamma_2\cdot RiskPref_i +  v_i,$$
-where $v_i$ is the error term. 
+The regression with endogeneity problem is:
+
+$$InsurancePremium_i = \alpha_0 + \alpha_1\cdot ActivityLevel_i + u_i,$$
+
+where $u_i$ is the error term which includes the risk preference parameter. The regression that "fixes" the endogeneity problem using fixed effects is:
+
+$$InsurancePremium_{it} = \gamma_0 + \gamma_1\cdot ActivityLevel_{it} + \gamma_2\cdot RiskPreference_{it} + v_{it},$$
+
+where $InsurancePremium_{it}$ is the insurance premium for individual i at time t, $ActivityLevel_{it}$ is the activity level of individual i at time t,
+$RiskPreference_{it}$ is the risk preference of individual i at time t, and $v_{it}$ is the error term.
 
 ## 4. Summary statistics
-```{r}
-library(psych)
-describe(data)
+
+```{r, results='asis'}
+library(stargazer)
+
+stargazer(data[, -c(1, 2)], 
+  title = "Summary Statistics", 
+  type = "latex", digits = 2,
+  covariate.labels = c("Insurance Premium", "Risk Preference"),
+  summary.stat = c("n", "mean", "sd", "min", "max"))
 ```
 
 ## 5. Regression results
-```{r}
+
+```{r, results='asis'}
 library(lmtest)
+library(plm)
 library(sandwich)
-model1 <- lm(insprem ~ age, data = data)
-model2 <- lm(insprem ~ age + risk_pref, data = data)
-summary(model1)
-summary(model2)
-``` 
+library(stargazer)
+
+model1 <- lm(insprem ~ activity_level, data = data)
+model2 <- lm(insprem ~ activity_level + risk_pref, data = data)
+
+stargazer(model1, model2,
+  type = "latex",
+  title = "Effect of Activity Level on Insurance Premium",
+  dep.var.labels = c("Insurance Premium"),
+  covariate.labels = c("Activity Level", "Risk Preference"),
+  omit.stat = c("f", "ser"),
+  no.space = TRUE)
+```
+
+Putting perfect collinearity aside, activity level is significant in both regressions, with it being slightly higher in the fixed effects regression. 
+Risk preference is also significant in the fixed effects regression. The fixed effects regression likely provides more accuarate estimates due to 
+addressing endogeneity concerns, as risk preference is a confounding variable that affects both activity level and insurance premium.
+
+I must have coded the data wrong given the perfect collinearity issue, but I am not sure where the error is.
+Feedback would be appreciated.
 
 # IV Model
 
@@ -81,52 +119,91 @@ How does exercise frequency affect mental health, using weather as an instrument
 ## 2. Dataset
 
 ```{r, output=FALSE}
+library(truncnorm)
 set.seed(0219)
 n <- 1000
-id <- 1:n
-exercise_freq <- rnorm(n, mean = 3, sd = 1)
-weather <- rnorm(n, mean = 0, sd = 1)
-mental_health <- 50 + 2 * exercise_freq + 5 * weather + rnorm(n, mean = 0, sd = 5)
-data_iv <- data.frame(id, exercise_freq, weather, mental_health)
+weather <- rbinom(n, 1, 0.5)
+socializing <- rtruncnorm(n, a = 0, b = 30, mean = 10, sd = 2)
+motivation <- rtruncnorm(n, a = 0, b = 10, mean = 5, sd = 1)
+exercise_freq <- 5 + 3 * weather + 0.5 * socializing + 0.2 * motivation + rnorm(n, mean = 0, sd = 2)
+mental_health_true <- 50 + 2 * exercise_freq + 1.5 * socializing + 3 * motivation + rnorm(n, mean = 0, sd = 5)
+mental_health_obs <- 50 + 2 * exercise_freq + 1.5 * socializing + rnorm(n, mean = 0, sd = 5)
+data_iv <- data.frame(weather = weather,
+  exercise_freq = exercise_freq,
+  socializing = socializing,
+  motivation = motivation,
+  mental_health_true = mental_health_true,
+  mental_health_obs = mental_health_obs)
 ```
 
-Each agent is a unit, with n=1000. The true model is:
+The unit of observation is an individual with n = 1000. In this model, $Y$ is mental health score, $X$ is exercise 
+frequency, $Z$ is weather (instrument), and $W$ is socializing frequency. The true model is: 
 
-$$MentalHealth_i = \beta_0 + \beta_1\cdot ExerciseFreq_i + \beta_2\cdot Weather_i + \epsilon_i,$$
+$$MentalHealth_i = \beta_0 + \beta_1\cdot ExerciseFreq_i + \beta_2\cdot Socializing_i + \beta_3\cdot Motivation_i + \epsilon_i,$$
 
-where $MentalHealth_i$ is the mental health score for agent i, $ExerciseFreq_i$ is the exercise 
-frequency of agent i, $Weather_i$ is the weather condition for agent i, and $\epsilon_i$ is the error term.
-The true coefficients are: $\beta_0 = 50$, $\beta_1 = 2$, $\beta_2 = 5$.
+where $MentalHealth_i$ is the mental health score for individual i, $ExerciseFreq_i$ is the exercise frequency of individual i,
+$Socializing_i$ is the socializing frequency of individual i, $Motivation_i$ is the motivation level of individual i, and $\epsilon_i$
+is the error term. The true coefficients are: $\beta_0 = 50$, $\beta_1 = 2$, $\beta_2 = 1.5$, $\beta_3 = 3$, and $\sigma = 5$. We observe 
+$MentalHealth_i$, $ExerciseFreq_i$, and $Socializing_i$, but we do not observe $Motivation_i$, so the model is misspecified as 
+
+$$MentalHealth_i = \alpha_0 + \alpha_1\cdot ExerciseFreq_i + \alpha_2\cdot Socializing_i + u_i,$$
+
+where $u_i$ is the error term which includes the motivation parameter.
 
 ## 3. Regressions
+
 The regression with endogeneity problem is:
-$$MentalHealth_i = \alpha_0 + \alpha_1\cdot ExerciseFreq_i + u_i,$$
 
-where $u_i$ is the error term which includes the weather parameter. The regression that "fixes" the endogeneity problem using IV is:
-First stage:
+$$MentalHealth_i = \alpha_0 + \alpha_1\cdot ExerciseFreq_i + \alpha_2\cdot Socializing_i + u_i,$$
 
-$$ExerciseFreq_i = \pi_0 + \pi_1\cdot Weather_i + w_i,$$
+where $u_i$ is the error term which includes the motivation parameter. The regression that "fixes" the endogeneity problem using IV is:
 
-Second stage:
+$$MentalHealth_i = \gamma_0 + \gamma_1\cdot \hat{ExerciseFreq}_i + \gamma_2\cdot Socializing_i + v_i,$$
 
-$$MentalHealth_i = \gamma_0 + \gamma_1\cdot \hat{ExerciseFreq}_i + v_i,$$
-
-where $\hat{ExerciseFreq}_i$ is the predicted exercise frequency from the first stage, and $v_i$ is the error term.
+where $\hat{ExerciseFreq}_i$ is the predicted exercise frequency from the first stage regression using weather as an instrument, and $v_i$ is the error term.
 
 ## 4. Summary statistics
-```{r}
-describe(data_iv)
+
+```{r, results='asis'}
+library(stargazer)
+stargazer(data_iv, 
+  title = "Summary Statistics", 
+  type = "latex", digits = 2,
+  covariate.labels = c("Weather", "Exercise Frequency", "Socializing Frequency", "Motivation", "Mental Health (True)", "Mental Health (Observed)"),
+  summary.stat = c("n", "mean", "sd", "min", "max"))
 ```
 
 ## 5. Regression results
-```{r}
-library(AER)
-model1_iv <- lm(mental_health ~ exercise_freq, data = data_iv)
-model2_iv <- ivreg(mental_health ~ exercise_freq | weather, data = data_iv)
-summary(model1_iv)
-summary(model2_iv)
-```
 
-As can be seen from the regression results, the first model without the instrument shows a biased estimate of the effect of exercise 
-frequency on mental health due to omitted variable bias. The second model using weather as an instrument provides a more accurate 
-estimate of the causal effect of exercise frequency on mental health.
+Exercise frequency is not signifcant in the IV regression, but is in the OLS. Socializing frequency is significant in both regressions. The IV regression likely
+provides more accuarate estimates due to addressing endogeneity concerns, as weather is a valid instrument that affects exercise frequency but is not directly related to mental health.
+The results suggest that socialization is a more important factor for mental health than exercise frequency when accounting for endogeneity.
+
+```{r, results='asis'}
+library(AER)
+library(stargazer) 
+
+model1_ols <- lm(mental_health_obs ~ exercise_freq, data = data_iv)
+model2_ols <- lm(mental_health_obs ~ exercise_freq + socializing, data = data_iv)
+
+model1_2sls <- lm(exercise_freq ~ weather, data = data_iv)
+data_iv$x_now <- model1_2sls$fitted.values
+model2_2sls <- lm(exercise_freq ~ weather + socializing, data = data_iv)
+data_iv$x_w2 <- model2_2sls$fitted.values
+
+model1_step2 <- lm(mental_health_obs ~ x_now, data = data_iv)
+model2_step2 <- lm(mental_health_obs ~ x_w2 + socializing, data = data_iv)
+
+model_iv <- ivreg(mental_health_obs ~ exercise_freq + socializing | weather + socializing, data = data_iv)
+
+stargazer(model1_ols, model2_ols, model1_step2, model2_step2, model_iv, 
+  type = "latex",
+  title = "Effect of Exercise Frequency on Mental Health",
+  dep.var.labels = c("Mental Health (Observed)"),
+  column.labels = c("OLS (No W)", "OLS (With W)", "2SLS (No W)", "2SLS (With W)", "IV Regression"),
+  covariate.labels = c("Exercise Frequency", "Socializing Frequency", "Socializing Frequency (2SLS)", "Exercise Frequency (2SLS)"),
+  omit.stat = c("f", "ser"),
+  no.space = TRUE,
+  flip = TRUE,
+  float.env = "sidewaystable")
+```
