--- a/Y2S1/Health/PapersForPres/mason-prager-pres.tex
+++ b/Y2S1/Health/PapersForPres/mason-prager-pres.tex
@@ -10,12 +10,11 @@
 \usepackage{booktabs}   % for tables
 \usepackage{amsmath, amssymb} % for math
 \usepackage{hyperref}   % for clickable links
-\usepackaage{xcolor}  % for color text
 
 % Title page info
 \title[]{Presentation of 'Employer Consolidation and Wages: Evidence from the Hospital Industry'}
 \subtitle{Written by: Elena Prager and Matt Schmitt}
-\author[Your Name]{Tate Mason\\ \smallskip \texttt{Tate.Mason@uga.edu}}
+\author[Tate Mason]{Tate Mason\\ \smallskip \texttt{Tate.Mason@uga.edu}}
 \date{\today} % or custom date
 
 % Begin document
@@ -162,7 +161,7 @@ Nurse unionization rate  &  0.159  &  0.121  & 0.292 &  0.223  &  0.123  &  0.08
   \begin{figure}
     \centering
     \includegraphics[width=0.33\textwidth]{parallel_trends.png}
-    \caption{Wage trend differences (top quartile of mergers)}
+    \caption{Wage trend differences (top quartile of concentration)}
   \end{figure}
 \end{frame}
 
