--- a/Y2S1/Metrics/PSets/PS1/PS1.qmd
+++ b/Y2S1/Metrics/PSets/PS1/PS1.qmd
@@ -163,7 +163,7 @@ summary(IV6b)
 
 ## Part 7: 
 
-$D_i$ by formation cannot deviate from compliance. When $Z_i = 0$, The sum of $\alpha_0, \alpha_U, \epsilon_i^D$
+$D_i$ by formation cannot have defiers. When $Z_i = 0$, The sum of $\alpha_0, \alpha_U, \epsilon_i^D$
 is negative as $\alpha_0 = -4$ while $\alpha_U*U + \epsilon_i^D$ is not greater than 4, thus implying $D_i = 0$ when
 $Z_i = 0$.
 
@@ -176,7 +176,7 @@ df <- df %>%
     D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
     pNT = mean(Z_i == 1 & D_i == 0),
-    pAT = mean(Z_i == 0 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
     pC = 1 - pAT - pNT
   )
 
@@ -185,7 +185,7 @@ summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
 cor(df$D_i, df$Z_i)
 ```
 
-Most are not compliers, with about 0.37 proportion of compliers. The correlation between $D$ and $Z$ is about 0.67.
+Majority are compliers, with about 82% compliers and a correlation of about 0.67 between $D$ and $Z$.
 
 ## Part 9:
 
@@ -198,7 +198,7 @@ df <- df %>%
     pZ = length(Z_i == 1)/length(id),
     pD = length(D_i == 1)/length(id),
     pNT = mean(Z_i == 1 & D_i == 0),
-    pAT = mean(Z_i == 0 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
     pC = 1 - pAT - pNT
   )
 
@@ -207,14 +207,16 @@ summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
 cor(df$D_i, df$Z_i)
 ```
 
-Proportion of compliers increases quite a bit, from about 0.37 to about 0.52. 
+Proportion of compliers increases quite a bit, from about 0.82 to about 0.98. Correlation is now 0.96, a significant increase from before. 
 
 ## Part 10: How does correlation between $D \text{and} Z$ vary with the proportion of compliers when we change $\alpha_Z$?
 
 The correlation also increases from about 0.67 to about 0.96, implying the coefficient on $Z$ has a strong effect on the correlation between $D$ and $Z$.
 
 
-## Part 11: Show that we can justify the claim of no external validity problems from item 1.
+## Part 11: Irrespective of whether $\alpha_Z$ = 5 or $\alpha_Z$ = 10, there is no external validity problem (e.g. LATE $\ne$ ATE) in this case. Show that you can justify this assertion directly from item 1 alone.
+
+
 
 ## Part 12: Repeat with seed values of 2, 3, and 4
 
@@ -281,11 +283,13 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
+
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
 cor(df$Z_i, df$D_i)
 
 df <- df %>%
@@ -293,11 +297,13 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
+
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
 cor(df$Z_i, df$D_i)
 ```
 
@@ -362,9 +368,9 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 0),
+    pC = 1 - pAT - pNT
   )
 length(df$compliers)
 cor(df$Z_i, df$D_i)
@@ -373,9 +379,9 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 0),
+    pC = 1 - pAT - pNT
   )
 length(df$compliers)
 cor(df$Z_i, df$D_i)
@@ -455,9 +461,9 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT,
   )
 length(df$compliers)
 cor(df$Z_i, df$D_i)
@@ -528,23 +534,26 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 0),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
+
 df <- df %>%
   mutate(
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 0),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
 ```
 ```{r}
 set.seed(2)
@@ -609,23 +618,27 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
+  
 df <- df %>%
   mutate(
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
+
 ```
 ```{r}
 set.seed(3)
@@ -690,23 +703,27 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
+
 df <- df %>%
   mutate(
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
+
 ```
 ```{r}
 set.seed(4)
@@ -771,21 +788,24 @@ df <- df %>%
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
+
 df <- df %>%
   mutate(
     Z_i = as.numeric(z_i > 0.5),
     D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
     Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
-    pZ = length(Z_i == 1)/length(id),
-    pD = length(D_i == 1)/length(id),
-    compliers = (pZ*D_hat)/pD
+    pNT = mean(Z_i == 1 & D_i == 0),
+    pAT = mean(Z_i == 0 & D_i == 1),
+    pC = 1 - pAT - pNT
   )
-length(df$compliers)
-cor(df$Z_i, df$D_i)
+summarize(df, pC = mean(pC), pNT = mean(pNT), pAT = mean(pAT))
+
+cor(df$D_i, df$Z_i)
 ```
